--- a/src/global.css
+++ b/src/global.css
@@ -2,6 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #d0d8ee #becbd2;
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #e3e8eb;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #b9bed0;
+  border-radius: 5px;
+  border: 1px solid #c9c5c5;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
