--- a/src/global.css
+++ b/src/global.css
@@ -11,7 +11,7 @@
 
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 5px;
+  width: 2px;
 }
 
 *::-webkit-scrollbar-track {
@@ -20,7 +20,7 @@
 
 *::-webkit-scrollbar-thumb {
   background-color: #b9bed0;
-  border-radius: 5px;
+  border-radius: 10px;
   border: 1px solid #c9c5c5;
 }
 
@@ -88,6 +88,10 @@
 
     --ring: 240 3.7% 15.9%;
   }
+}
+
+body {
+  background-color: #f5f5f5;
 }
 
 @layer base {
