style: set scrollbar width for table to 0

--- a/src/global.css
+++ b/src/global.css
@@ -9,6 +9,9 @@
   scrollbar-color: #becbd2 #eee;
 }
 
+.tableContainer {
+  scrollbar-width: none;
+}
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
   width: 2px;
