refactor: changes design for side bar and implement serve action

--- a/src/global.css
+++ b/src/global.css
@@ -10,7 +10,7 @@
 }
 
 .tableContainer {
-   scrollbar-width: none;
+   scrollbar-width: thin;
 }
 /* Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
