--- a/src/global.css
+++ b/src/global.css
@@ -27,6 +27,9 @@
    border: 1px solid #c9c5c5;
 }
 
+.activity {
+   scrollbar-width: none;
+}
 @layer base {
    :root {
       --background: 0 0% 100%;
