--- a/src/global.css
+++ b/src/global.css
@@ -96,15 +96,20 @@
    }
 }
 
-body {
-   background-color: #f5f5f5;
-}
-
 @layer base {
    * {
       @apply border-border;
    }
    body {
       @apply bg-background text-foreground;
+      transition: all 400ms;
    }
+}
+
+.transition {
+   transition: all 400ms;
+}
+
+.border-dark {
+   @apply border-[1px] border-white;
 }
