--- a/src/global.css
+++ b/src/global.css
@@ -31,6 +31,11 @@
    scrollbar-width: none;
 }
 @layer base {
+   input[type='number']::-webkit-inner-spin-button,
+   input[type='number']::-webkit-outer-spin-button {
+      -webkit-appearance: none;
+      margin: 0;
+   }
    :root {
       --background: 0 0% 100%;
       --foreground: 240 10% 3.9%;
